--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
   <build_depend>nav_core</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>pluginlib</build_depend>
+  <build_depend>ddynamic_reconfigure</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>tf</run_depend>
@@ -23,6 +24,9 @@
   <run_depend>nav_core</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>pluginlib</run_depend>
+  <run_depend>ddynamic_reconfigure</run_depend>
+
+  
 
   <export><nav_core plugin="${prefix}/regulated_pure_pursuit_controller.xml"/></export>
 
