removed logging_tools dependency and obsolete debugging logging statement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,18 +18,12 @@ find_package(catkin REQUIRED COMPONENTS
 
         mbf_msgs
         mbf_costmap_core
-        logging_tools
 )
 
-find_package(
-  Boost 1.40 COMPONENTS
-  timer
-  REQUIRED)
 
 include_directories(
         include
         ${catkin_INCLUDE_DIRS}
-        ${BOOST_INCLUDE_DIR}
 )
 
 link_directories(${catkin_LIBRARY_DIRS})
@@ -46,8 +40,7 @@ add_library(regulated_pure_pursuit_controller
         src/regulated_pure_pursuit_controller.cpp)
 
 target_link_libraries(regulated_pure_pursuit_controller 
-                        ${catkin_LIBRARIES}
-                        ${Boost_LIBRARIES} )
+                        ${catkin_LIBRARIES})
 add_dependencies(regulated_pure_pursuit_controller nav_msgs_gencpp)
 
 install(TARGETS regulated_pure_pursuit_controller
