--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,7 @@
 
   <build_depend>roscpp</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>base_local_planner</build_depend>
   <build_depend>costmap_2d</build_depend>
   <build_depend>nav_core</build_depend>
   <build_depend>nav_msgs</build_depend>
@@ -20,6 +21,7 @@
 
   <run_depend>roscpp</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>base_local_planner</run_depend>
   <run_depend>costmap_2d</run_depend>
   <run_depend>nav_core</run_depend>
   <run_depend>nav_msgs</run_depend>
